PA_Education/TestMenifest/force-app/main/default/objects/EducationalHistory__c/EducationalHistory__c.object-meta.xml
<CustomObject>
    <label>학력사항</label>
    <nameField>
        <label>학교 명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>