PA_Education/TestMenifest/force-app/main/default/objects/EducationalHistory__c/fields/AdmissionDate__c.field-meta.xml
<CustomField>
    <fullName>AdmissionDate__c</fullName>
    <label>입학일자</label>
    <type>Date</type>
</CustomField>