PA_Education/TestMenifest/force-app/main/default/objects/EducationalHistory__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>학위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>박사</fullName>
            </value>
            <value>
                <fullName>박사 수료</fullName>
            </value>
            <value>
                <fullName>석사</fullName>
            </value>
            <value>
                <fullName>석사 수료</fullName>
            </value>
            <value>
                <fullName>학사</fullName>
            </value>
            <value>
                <fullName>전문학사</fullName>
            </value>
            <value>
                <fullName>고졸</fullName>
            </value>
            <value>
                <fullName>중졸</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>