PA_Education/TestMenifest/force-app/main/default/objects/EducationalHistory__c/fields/GraduatedDate__c.field-meta.xml
<CustomField>
    <fullName>GraduatedDate__c</fullName>
    <label>졸업일자</label>
    <type>Date</type>
</CustomField>