PA_Education/TestMenifest/force-app/main/default/objects/EducationalHistory__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>전공</label>
    <length>50</length>
    <type>Text</type>
</CustomField>